--- a/Enigma/Podfile
+++ b/Enigma/Podfile
@@ -6,6 +6,7 @@ target 'Enigma' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
   pod 'Kingfisher', '~> 7.0'
+pod 'IQKeyboardManagerSwift'
 
   # Pods for Enigma
 
