--- a/Enigma/Enigma/Info/Info.plist
+++ b/Enigma/Enigma/Info/Info.plist
@@ -22,6 +22,12 @@
 		</dict>
 	</dict>
 	<key>UIBackgroundModes</key>
-	<array/>
+	<array>
+		<string>audio</string>
+		<string>fetch</string>
+		<string>location</string>
+		<string>processing</string>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
